[gd_scene load_steps=5 format=3 uid="uid://bhaya5sk8xnk"]

[ext_resource type="FontFile" uid="uid://cawekr44fruhm" path="res://assets/fonts/open-sans/open-sans-regular.ttf" id="1_4w4tg"]
[ext_resource type="Script" path="res://scenes/gameplay/fightzone/fightzone.gd" id="1_edjpk"]
[ext_resource type="PackedScene" uid="uid://krooeswl2kml" path="res://scenes/gameplay/fightzone/terrain/TestBiome.tscn" id="3_lq371"]

[sub_resource type="FontFile" id="FontFile_1tkbn"]
fallbacks = Array[Font]([ExtResource("1_4w4tg")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Fightzone" type="Node2D"]
script = ExtResource("1_edjpk")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(650, 512)
render_target_update_mode = 4

[node name="TestBiome" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_lq371")]

[node name="LootTimer" type="Timer" parent="."]
one_shot = true

[node name="BoostTimer" type="Timer" parent="."]
one_shot = true

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoostProgressBar" type="ProgressBar" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -11.0
offset_right = 160.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = SubResource("FontFile_1tkbn")
max_value = 1.0
show_percentage = false

[node name="Label" type="Label" parent="GUI/BoostProgressBar"]
layout_mode = 0
offset_left = 12.0
offset_right = 80.0
offset_bottom = 26.0
text = "boosted!"

[node name="LootProgressBar" type="ProgressBar" parent="GUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 415.0
offset_top = -15.0
offset_right = 585.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = SubResource("FontFile_1tkbn")
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Label" type="Label" parent="GUI/LootProgressBar"]
layout_mode = 0
offset_left = 11.0
offset_top = 1.0
offset_right = 85.0
offset_bottom = 27.0
text = "next item"

[node name="Fight" type="Control" parent="GUI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GUI/Fight"]
layout_mode = 0
offset_left = 280.0
offset_top = 55.0
offset_right = 348.0
offset_bottom = 81.0
text = "fighting!"

[node name="FightTimer" type="Timer" parent="."]

[node name="NextFightTimer" type="Timer" parent="."]

[connection signal="timeout" from="LootTimer" to="." method="_on_loot_timer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_boost_timer_timeout"]
[connection signal="timeout" from="FightTimer" to="." method="_on_fight_timer_timeout"]
[connection signal="timeout" from="NextFightTimer" to="." method="_on_next_fight_timer_timeout"]
